[package]
name = "ctxsnap"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tempfile = "3.8"
chrono = "0.4"
encoding_rs = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"